--- a/src/cadastro/cadastro.css
+++ b/src/cadastro/cadastro.css
@@ -70,6 +70,24 @@ body {
   margin-left: 5px;
 }
 
+#msgError {
+  text-align: center;
+  color: #ff0000;
+  background-color: #ffbbbb;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+#msgSuccess {
+  text-align: center;
+  color: #00bb00;
+  background-color: #bbffbe;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
 @media (min-width: 400px) {
   .sign-up {
     width: 20rem;
