--- a/src/pages/minhas-denuncias/minhas-denuncias.css
+++ b/src/pages/minhas-denuncias/minhas-denuncias.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 80vh;
+  height: 100%;
   border-radius: 15px;
 }
 
