--- a/src/pages/usuario/usuario.css
+++ b/src/pages/usuario/usuario.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 2rem;
 }
 
@@ -60,6 +60,30 @@
   display: none;
 }
 
+#name-info {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.info {
+  margin-left: 0.5rem;
+}
+
+.disabled {
+  opacity: 50%;
+}
+
+.success {
+  background-color: green;
+}
+
+#name-container {
+  display: flex;
+  flex-direction: row;
+  margin: -2.5rem 0 0 1.5rem;
+}
+
 @media (min-width: 400px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 }
@@ -73,5 +97,9 @@
   .option-header {
     width: 100%;
     justify-content: flex-end;
+  }
+
+  .user {
+    height: 85vh;
   }
 }
