--- a/src/pages/usuario/usuario.css
+++ b/src/pages/usuario/usuario.css
@@ -81,7 +81,7 @@
 #name-container {
   display: flex;
   flex-direction: row;
-  margin: -2.5rem 0 0 1.5rem;
+  margin: 0 0 0 1.5rem;
 }
 
 @media (min-width: 400px) {
