--- a/src/pages/denuncias-convidado/denuncias-convidado.css
+++ b/src/pages/denuncias-convidado/denuncias-convidado.css
@@ -3,24 +3,19 @@ body {
   font-weight: 400;
 }
 
-.guest-denunciations {
+.denunciations {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   padding: 2rem;
 }
 
-.option-header {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.guest-denunciations header,
-.guest-denunciations main {
+.denunciations header,
+.denunciations main {
   padding: 5px 30px 5px 30px;
 }
 
-.guest-denunciations header h1 {
+.denunciations header h1 {
   text-align: center;
   font-family: "Inter", sans-serif;
   font-weight: 600;
@@ -65,6 +60,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: fill;
+  cursor: pointer;
 }
 
 .filters {
@@ -111,6 +107,11 @@ body {
   justify-content: flex-end;
 }
 
+.icon-button {
+  border: none;
+  background-color: transparent;
+}
+
 table {
   margin: 1rem 0;
   border-collapse: collapse;
@@ -126,6 +127,7 @@ td {
   margin: 1rem 0;
   text-align: center;
   padding: 0.5rem 0;
+  vertical-align: middle;
 }
 
 td a {
@@ -142,16 +144,10 @@ tr:nth-child(even) {
 }
 
 .table-header th {
-  text-align: left;
   padding-left: 0.5rem;
 }
 
-.next-pagination {
-  cursor: pointer;
-}
-
 .table-footer {
-  /* margin: 1rem 0; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -173,30 +169,60 @@ tr:nth-child(even) {
   margin-bottom: 0.1rem;
 }
 
+.menu-bar,
 .option-header {
   display: none;
 }
 
+.next-pagination {
+  cursor: pointer;
+}
+
+.view-icon {
+  cursor: pointer;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+  margin-top: 1.25rem;
+  margin-left: 2rem;
+  font-weight: bolder;
+}
+
+.modal-content {
+  background-color: #f2f2f2;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.content-warning {
+  color: red;
+  font-weight: bolder;
+  font-size: x-large;
+}
+
+.content-link {
+  font-weight: bolder;
+}
+
 @media (max-width: 400px) {
   .card-app {
-    height: 85vh;
+    height: 95vh;
     padding-bottom: 1rem;
   }
-
   .modal-container {
     width: 15rem;
   }
-
-  .guest-denunciations {
+  .denunciations {
     padding: 1rem 2rem 1rem 2rem;
     width: 15rem;
     height: 75vh;
   }
-
   table {
     margin-left: -0.6em;
   }
-
   .form-search .input-base {
     width: 100%;
     padding: 15px;
@@ -204,18 +230,17 @@ tr:nth-child(even) {
 }
 
 @media (max-width: 800px) {
+  .menu-bar,
   .option-header {
     display: flex;
   }
   .modal-container {
     width: 17rem;
   }
-
-  .guest-denunciations main,
-  .guest-denunciations header {
+  .denunciations main,
+  .denunciations header {
     padding: 0;
   }
-
   .button-base {
     font-size: 0.6rem;
   }
